{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 16,
  "lineage": "4b6d8908-b0f3-31fe-2749-110baf76c68f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "group-two-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862686223907:internet-gateway/igw-07dd75d9ca196552e",
            "id": "igw-07dd75d9ca196552e",
            "owner_id": "862686223907",
            "tags": {
              "Name": "group-two-ig"
            },
            "tags_all": {
              "Name": "group-two-ig"
            },
            "vpc_id": "vpc-0eb73a52a60ce0d60"
          },
          "dependencies": [
            "aws_vpc.group-two-application-deployment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "group-two-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862686223907:route-table/rtb-0a08a1b4c411dbdf5",
            "id": "rtb-0a08a1b4c411dbdf5",
            "owner_id": "862686223907",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07dd75d9ca196552e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0eb73a52a60ce0d60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.group-two-ig",
            "aws_vpc.group-two-application-deployment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "group-two-application-deployment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862686223907:vpc/vpc-0eb73a52a60ce0d60",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.16.0.0/16",
            "default_network_acl_id": "acl-0312d2b12cc267492",
            "default_route_table_id": "rtb-067ac10a9e18c6035",
            "default_security_group_id": "sg-00f3b7ec15d65aebf",
            "dhcp_options_id": "dopt-045c883b8dbab99d7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eb73a52a60ce0d60",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-067ac10a9e18c6035",
            "owner_id": "862686223907",
            "tags": {
              "Name": "group-two-application-deployment-vpc"
            },
            "tags_all": {
              "Name": "group-two-application-deployment-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-092a4dc7e472f8bc6",
            "arn": "arn:aws:ec2:us-east-2:862686223907:instance/i-0b75d0e10424ee43f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b75d0e10424ee43f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "group-two",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0410e61a0f4b62d75",
            "private_dns": "ip-10-16-0-207.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.16.0.207",
            "public_ip": "52.14.7.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03ba891edb9f6ff5e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0812fe9b7e50e1b9a",
            "tags": {
              "Name": "group-two-app"
            },
            "tags_all": {
              "Name": "group-two-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e9e2576eca20254d"
            ]
          },
          "dependencies": [
            "aws_vpc.group-two-application-deployment",
            "module.application-tier.aws_security_group.group-two-sg-group",
            "module.application-tier.aws_subnet.group-two-app-subnet",
            "module.db-tier.aws_instance.db",
            "module.db-tier.aws_security_group.group-two-sg-db-group",
            "module.db-tier.aws_subnet.group-two-db-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "group-two-app-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bd390013ca2da74",
            "route_table_id": "rtb-0a08a1b4c411dbdf5",
            "subnet_id": "subnet-0812fe9b7e50e1b9a"
          },
          "dependencies": [
            "aws_internet_gateway.group-two-ig",
            "aws_route_table.group-two-rt",
            "aws_vpc.group-two-application-deployment",
            "module.application-tier.aws_subnet.group-two-app-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "group-two-sg-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862686223907:security-group/sg-0e9e2576eca20254d",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9e2576eca20254d",
            "ingress": [],
            "name": "group-two-app-sg",
            "name_prefix": "",
            "owner_id": "862686223907",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "group-two-app-sg"
            },
            "tags_all": {
              "Name": "group-two-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb73a52a60ce0d60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.group-two-application-deployment"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2996615729",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e9e2576eca20254d",
            "security_group_rule_id": "sgr-0a21239eda0342d3a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.group-two-application-deployment",
            "module.application-tier.aws_security_group.group-two-sg-group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-68609924",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e9e2576eca20254d",
            "security_group_rule_id": "sgr-0dc344927ac85d62f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.group-two-application-deployment",
            "module.application-tier.aws_security_group.group-two-sg-group"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "group-two-app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862686223907:subnet/subnet-0812fe9b7e50e1b9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.16.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0812fe9b7e50e1b9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "862686223907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "group-two-app"
            },
            "tags_all": {
              "Name": "group-two-app"
            },
            "vpc_id": "vpc-0eb73a52a60ce0d60"
          },
          "dependencies": [
            "aws_vpc.group-two-application-deployment"
          ]
        }
      ]
    },
    {
      "module": "module.db-tier",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02fcafe36f7b51e84",
            "arn": "arn:aws:ec2:us-east-2:862686223907:instance/i-0ae63023f00e787cc",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ae63023f00e787cc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "group-two",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f144b817b85cdb43",
            "private_dns": "ip-10-16-1-187.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.16.1.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f2abe7f7ee3edf8d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06f272697d08adb74",
            "tags": {
              "Name": "group-two-database"
            },
            "tags_all": {
              "Name": "group-two-database"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0359db14c3e3b7bd4"
            ]
          },
          "dependencies": [
            "aws_vpc.group-two-application-deployment",
            "module.db-tier.aws_security_group.group-two-sg-db-group",
            "module.db-tier.aws_subnet.group-two-db-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.db-tier",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "group-two-db-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd57ed4f7305f671",
            "route_table_id": "rtb-067ac10a9e18c6035",
            "subnet_id": "subnet-06f272697d08adb74"
          },
          "dependencies": [
            "aws_vpc.group-two-application-deployment",
            "module.db-tier.aws_subnet.group-two-db-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.db-tier",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "group-two-sg-db-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862686223907:security-group/sg-0359db14c3e3b7bd4",
            "description": "Allow all invound traffric",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0359db14c3e3b7bd4",
            "ingress": [],
            "name": "group-two-database-db-sg",
            "name_prefix": "",
            "owner_id": "862686223907",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "group-two-database-sg"
            },
            "tags_all": {
              "Name": "group-two-database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb73a52a60ce0d60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.group-two-application-deployment"
          ]
        }
      ]
    },
    {
      "module": "module.db-tier",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.16.0.0/24"
            ],
            "description": null,
            "from_port": 27017,
            "id": "sgrule-2749974309",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0359db14c3e3b7bd4",
            "security_group_rule_id": "sgr-0f1fcd54aa9af8205",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 27017,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.group-two-application-deployment",
            "module.db-tier.aws_security_group.group-two-sg-db-group"
          ]
        }
      ]
    },
    {
      "module": "module.db-tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "group-two-db-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862686223907:subnet/subnet-06f272697d08adb74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f272697d08adb74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862686223907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "group-two-database-db-subnet"
            },
            "tags_all": {
              "Name": "group-two-database-db-subnet"
            },
            "vpc_id": "vpc-0eb73a52a60ce0d60"
          },
          "dependencies": [
            "aws_vpc.group-two-application-deployment"
          ]
        }
      ]
    }
  ]
}